styles.css
:root {
    --bolt-1-bounce-h-duration: 2s;
    --bolt-1-bounce-v-duration: 1.37s;
}

html{
    scrollbar-gutter: stable;
    scroll-behavior: smooth;
}

body{
        background: linear-gradient(180deg, rgb(237, 182, 0) 0%, rgb(224, 117, 3) 100%);
        background-attachment: fixed;
        margin: 0;
        padding: 0;
        box-sizing: border-box;
        overflow-x: hidden;
}

a {
    text-decoration: none;
    color: black;
}

#body-div{
    width: 100vw;
    height: 100vh;
}

#width-margin{
    height: 95dvh;
    width: 95vw;
    justify-self: center;
    /*background-color: rgb(224, 48, 9);*/
    align-content: start;
}

#height-margin{
    height: 100%;
    padding-top: 2.5vh;
    padding-bottom: 2.5vh;
    /*background-color: rgb(40, 82, 187);*/
}

#nav-bar{
    position: fixed;
    display: flex;
    flex-direction: row;
    height: 10vh;
    width: 100%;
    box-sizing: border-box;
    margin: 0;
    padding-left: 100px;
    padding-right: 700px;
    background-color: rgb(56, 224, 9);
    justify-content: space-between;
}

#logo-rive{
    display: none;
    position: absolute;

    width: 100vw; 
    height: 100vw;
    max-height: 100vh;
    max-width: 100vh;
    aspect-ratio: 1/1;

    animation-name: logo-to-top;
    animation-duration: 1.35s;
    animation-fill-mode: forwards;
    z-index: 1;
}

.full-screen-rive{
    position: fixed;
    width: 100vw; 
    height: 100vw;
    max-height: 50vh;
    max-width: 50vh;
    aspect-ratio: 1/1;
    top:0%; bottom: 0%; left: 0%; right: 0%;
    margin: auto;
}

#console-container{
    display: flexbox;
    width: 100%;
    height: auto;
    aspect-ratio: 1/1;
    margin: auto;
    text-align: center;
}

#console-rive
{
    width: 100%;
    height: 100%;
    aspect-ratio: 1/1;
    margin: auto;
    z-index: 1;
}

.project-button{
    position:absolute;
    width: 17%;
    height: 17%;
    border-radius: 50%;
    top: 60.7%;
    left: 26.4%;
    aspect-ratio: 1/1;
    z-index: 2;
    /*background-color: blue;*/
}

.services-button{
    position:absolute;
    width: 17%;
    height: 17%;
    border-radius: 50%;
    top: 60.7%;
    left: 56%;
    aspect-ratio: 1/1;
    z-index: 2;
    /*background-color: blue;*/
}

.cycle-services-button{
    position:absolute;
    width: 50%;
    height: 60%;
    border-radius: 10%;
    top: 31.7%;
    left: 26%;
    aspect-ratio: 1/1;
    z-index: 2;
    /*background-color: blue;*/
}

.start-button{
    position:absolute;
    width: 24%;
    height: 7.6%;
    left:38%;
    top: 84.5%;
    aspect-ratio: 1/1;
    z-index: 2;
    /*background-color: blue;*/
}

.take-me-to-the-site{
    position:absolute;
    top: 90%;
}

.centred-text{
    text-align: center;
}

@keyframes logo-to-top {
    0%{
        
    }
}

.hidden-page-container{
    display: none;
}

.show-page-container{
    display: flex;
    flex-direction: row;
}

#root-flexbox{
    
}

#side-nav{
    position: sticky;
    top: 0;
    align-self:flex-start;

    height: 100vh;

    width: auto;

    background-image: url('public/BoltSmall.svg');
    background-repeat: repeat;
    background-size: 25%;

    animation: nav-background-scroll 30s infinite linear;
}

@keyframes nav-background-scroll{
    0%{
        background-position: 0% 100%;
    }
    100%{
        background-position: 0% 0%;
    }
}

#nav-foreground{
    display: flex;
    flex-direction: column;
    height: auto;
    padding-left: 5%;
    background: linear-gradient(180deg, rgba(237, 158, 0, 255) 0%, rgb(224, 113, 3) 100%);
    clip-path: polygon(0% 0%, 100% 0%, 
                        100% 75%, 0% 100%);
}

svg path{
    fill: white;
}

#nav-logo{
    margin-top: 5%;
    height: auto;
    width: auto;
}

.nav-text{
    padding-left: 5%;
    padding-right: 10%;
}

#nav-bottom-spacer{
    height: 100px;
}

#page-container{
    display: flex;
    flex-direction: column;
    margin-left: 2.5%;
}

#page-title{
    font-size: 60px;
}

#tagline{
    margin-top: 0;
    font-size: 40px;
}

.page-text{
    margin-top: 0;
    font-size: 30px;
    width: 90%;
}

.section-title{
    font-size: 30px;
}

.trailer-service-title{
    padding-left: 2.5%;
    font-size: 40px;
}

.service-container{
    display: flex;
    flex-direction: row;
    flex-basis: content;
    width: 80%;
    padding-left: 5%;
}

.service-title{
    padding-right: 5%;
    min-width: 30%;
    font-size: 40px;
    margin-top: 0;
    white-space: nowrap;
}

.service-descriptor{
    margin-top: 0;
    font-size: 30px;
}

#partner-text{
    padding-left: 2.5%;
    width: 80%;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
  }

  .animate-out-logo-container{
    /*(interpolate-size: allow-keywords;
    animation-name: animate-out-logo;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;*/
    font: 100;
  }

  .animate-out-logo-rive{
    /*animation-name: animate-out-logo-rive;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;*/
    font: 100;
  }

@keyframes animate-out-logo {
    0%{
        transform:translateY(0vh);
        aspect-ratio: 1/1;
    }
    100%{
        transform:translateY(-0vh);
        max-width: 100vw;
        max-width: 100vh;
        aspect-ratio: 1/1;
    }
}

@keyframes animate-out-logo-rive {
    0%{
        opacity: 1;
        width: 100%;
    }
    100%{
        opacity: 0;
        width: 1000%;
    }
}

.animate-in-site{
    display: flex;
    flex-direction: row;
    animation-name: animate-in-site;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

@keyframes animate-in-site {
    0%{
        opacity: 0;
    }
    100%{
        opacity: 1;
    }
}

